[project]
name = "tolmach"
version = "0.1.0"
description = "Heroes III map convertor to json and back"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chardet==7.4.0.post2",
    "pre-commit==4.5.1",
    "pydantic==2.12.5",
    "ruff==0.15.8",
]


[tool.ruff]

line-length = 100

target-version = "py313"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "T", "COM", "A", "FIX", "I", "TID252"]
ignore = ["COM812"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "single"


[dependency-groups]
dev = [
    "ipython>=9.12.0",
    "pytest>=9.0.3",
]
